feat: A LOT of things (forgot to commit)